--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "bls-backend",
+  "name": "deploy-free",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "vercel-build": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "prisma": "^5.22.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "@types/express": "^4.17.15",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.9.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "vitest": "^0.27.2"
   },
   "dependencies": {
-    "@vercel/node": "^3.2.24",
-    "fastify": "^5.1.0"
+    "@prisma/client": "^4.9.0",
+    "express": "^4.18.2"
   }
 }
