--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "vercel-build": "npx prisma migrate deploy"
+    "dev": "tsx src/app.ts",
+    "build": "tsup src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "vitest": "^0.27.2"
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
-    "express": "^4.18.2"
+    "fastify": "^5.1.0"
   }
 }
