--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx src/app.ts",
-    "build": "tsup src"
+    "build": "tsup src",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
