--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@prisma/client": "^4.9.0",
     "fastify": "^5.1.0",
     "zod": "^3.23.8"
